# src_platform_clip-update-user-data

./: AUTHORS  CHANGELOG  Makefile.am  Makefile.in  README.md  configure  configure.ac
man/: Makefile.am  Makefile.in  clip-update-user-data.8
scripts/: Makefile.am  Makefile.in  clip-update-user-data
